Fixed word wrapping on MC form questions.
Summary:
Added a table to the display for the input and question labels so text would wrap properly.

{F13187}

Test Plan: Go to a classroom page and click the pre/post assessment link. Shrink the page until the text doesn't fit on a line.

Reviewers: aleks, liang

Reviewed By: aleks

Subscribers: bigblue, neezus, liang, generic

Projects: #bizworld

Differential Revision: http://phab.calblueprint.org/D176

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -104,12 +104,26 @@ $icon-list: "\f0b1" "\f008" "\f201";
   .question {
     margin: 40px auto;
 
-    .radio-label {
-      font-size: $f-size-md;
-      font-weight: normal;
-      margin-bottom: 0px;
-      margin-left: 10px;
-      padding: 5px 0;
+    .radio-option {
+      display: table;
+      width: 100%;
+      clear: both;
+
+      input {
+        display: table-cell;
+        width: 20px;
+        vertical-align: 2px;
+      }
+
+      .radio-label {
+        font-size: $f-size-md;
+        font-weight: normal;
+        margin-bottom: 0px;
+        margin-left: 10px;
+        padding: 5px 0px 5px 3px;
+        display: table-cell;
+        width: 100%;
+      }
     }
 
     .question-title {
